--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "non-private-ip",
-  "description": "",
+  "description": "see if you have a non private (i.e. public ip address)",
   "version": "0.0.0",
   "homepage": "https://github.com/dominictarr/non-private-ip",
   "repository": {
     "type": "git",
     "url": "git://github.com/dominictarr/non-private-ip.git"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
+    "tape": "~3.0.3"
   },
   "scripts": {
     "prepublish": "npm ls &&  npm test",
     "test": "set -e; for t in test/*.js; do node $t; done"
   },
   "author": "Dominic Tarr <dominic.tarr@gmail.com> (http://dominictarr.com)",
-  "license": "MIT"  
+  "license": "MIT"
 }
